--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -13,10 +13,9 @@ jobs:
     - name: docker login
       run: | # log into docker hub account
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD  
-    - name: Get current date # get the date of the build
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+   
     - name: Build the Docker image # push The image to the docker hub
-      run: docker build . --file ./Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME:${{ steps.date.outputs.date }}
+      run: docker build . --file ./Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME:v1
+      
     - name: Docker Push
-      run: docker push $DOCKER_USERNAME/$REPO_NAME:${{ steps.date.outputs.date }}
+      run: docker push $DOCKER_USERNAME/$REPO_NAME:v1
