--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -4,7 +4,7 @@ on: [push] # When pushing to any branch then run this action
 env:
   DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-  REPO_NAME: ${{github.repository}}
+  
 jobs:
   push-image-to-docker-hub:  # job name
     runs-on: ubuntu-latest  # runner name : (ubuntu latest version) 
@@ -15,7 +15,7 @@ jobs:
         docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD  
    
     - name: Build the Docker image # push The image to the docker hub
-      run: docker build . --file ./Dockerfile --tag $DOCKER_USERNAME/$REPO_NAME:v1
+      run: docker build . --file ./Dockerfile --tag $DOCKER_USERNAME/test_repo:v1
       
     - name: Docker Push
-      run: docker push $DOCKER_USERNAME/$REPO_NAME:v1
+      run: docker push $DOCKER_USERNAME/test_repo:v1
