--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -19,3 +19,19 @@ jobs:
       
     - name: Docker Push
       run: docker push $DOCKER_USERNAME/test_repo:v1
+      
+  securitytest:
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@v3
+     - name: Checkout The Code
+
+     - name: Download Dependency Check Tool
+     - run: wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.3.1/dependency-check-8.3.1-release.zip
+
+     - name: Unzipping archive and install
+     - run: unzip dependency-check-8.3.1-release.zip && ls -l && dependency-check/bin/dependency-check.sh -s .
+   
+     
+
+ 
