--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Docker Push
       run: docker push $DOCKER_USERNAME/test_repo:v1
       
-  securitytest:
-   runs-on: ubuntu-latest
+  securitytest: # job name
+   runs-on: ubuntu-latest # runner name : (ubuntu latest version)
    steps:
    - uses: actions/checkout@v3
    - name: Checkout The Code
