--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -23,14 +23,13 @@ jobs:
   securitytest: 
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout The Code
-      uses: actions/checkout@v3 # first action : checkout source code
+    - uses: actions/checkout@v3 # first action : checkout source code
 
     - name: Download Dependency Check Tool
-    - run: wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.3.1/dependency-check-8.3.1-release.zip
+      run: wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.3.1/dependency-check-8.3.1-release.zip
 
     - name: Unzipping archive and install
-    - run: unzip dependency-check-8.3.1-release.zip && ls -l && dependency-check/bin/dependency-check.sh -s .
+      run: unzip dependency-check-8.3.1-release.zip && ls -l && dependency-check/bin/dependency-check.sh -s .
    
      
 
